[package]
name = "trouble-postcard-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", branch = "main", features = [
  "trouble",
] }
cortex-m = { version = "0.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7" }
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
derive_more = { version = "1.0", default-features = false, features = ["from"] }
embassy-boot = { version = "0.3" }
embassy-boot-nrf = { version = "0.3" }
embassy-embedded-hal = "0.2"
embassy-usb = { version = "0.3", features = ["defmt"] }
embedded-alloc = { version = "0.6", features = ["llff"] }
heapless = { version = "0.8" }
embassy-executor = { version = "0.6", default-features = false, features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
  "executor-interrupt",
  "task-arena-size-32768",
] }
embassy-time = { version = "0.3", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6", features = ["defmt"] }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
bt-hci = { version = "0.1.1", default-features = false, features = ["defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
  "defmt",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
postcard = { version = "1.0" }
postcard-rpc = { version = "0.10", features = ["embassy-usb-0_3-server"] }
postcard-schema = { version = "0.1", features = ["derive"] }
panic-reset = { version = "0.1.1" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }


[patch.crates-io]
postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc.git", branch = "main" }
postcard-schema = { git = "https://github.com/jamesmunns/postcard.git", branch = "main" }

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "off"

[profile.release]
debug = true
codegen-units = 1
lto = "off"

[profile.lto]
inherits = "release"
lto = true
